<resources>
    <string name="app_name">Weather</string>

    <string name="action_settings">Settings</string>
    <string name="title">Weather App</string>
    <string name="cant_find_location">Unable to detect your location.</string>
    <string name="zipcode">Set your zipcode.</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="fah">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="numDays">How many days in the forecast?</string>
    <string name="enterZip">Enter zip code</string>
    <string name="enterNumDays">Enter a number 1-10</string>
    <string name="zipCodeField">Change your zip code?</string>
    <string name="location_permission_title">Allow current location?</string>
    <string name="location_permission_message">Please allow us to use your current location to show you nearby weather.</string>
    <string name="data_not_found">Data not found, try changing your zip code in settings and check your internet connection.</string>
    <string name="invalid_num_days">Invalid number of days (1-10)</string>
</resources>
